# GLO-2001

./: .gitignore  README.md
TP1/: CMakeLists.txt  README.md  out.txt
TP1/RTC-8aout-1dec/: feed_info.txt
TP1/Sources fournies/: CMakeLists.txt  DonneesGTFS.cpp  DonneesGTFS.h  main.cpp
TP2/: out.txt
TP2/Sources fournies/: CMakeLists.txt  ReseauGTFS.cpp  ReseauGTFS.h  graphe.cpp  graphe.h  main  main.cpp
TP2/Sources fournies/RTC-8aout-1dec/: stops.txt
TP3/: out.txt
TP3/RTC-8aout-1dec/: trips.txt
TP3/Sources fournies/: CMakeLists.txt  ReseauGTFS.h  graphe.cpp  graphe.h  main  main.cpp
TP3/Sources fournies/RTC-8aout-1dec/: calendar_dates.txt  transfers.txt
